docs: correct the format errors in the document

--- a/docs/content/docs/4.api/0.options.md
+++ b/docs/content/docs/4.api/0.options.md
@@ -139,13 +139,13 @@ Vue I18n 的 `messages` 选项应通过 **普通对象** 返回。
 ### `defaultForDomains`
 
 - type: `null | string[]`{lang="ts-type"}
-- （在使用 [`multiDomainLocales`](/docs/api/options#multiDomainLocales）时是可选的）
+- （在使用 [`multiDomainLocales`](/docs/api/options#multiDomainLocales) 时是可选的）
 - 用于该区域的 `domain` 数组，在使用 `domains` 时该区域应为默认区域。
 
 ### `domainDefault`
 
 - type: `null | boolean`{lang="ts-type"}
-- 将 `domainDefault` 设置为 `true`，以使每个区域在特定域中充当默认区域。使用 [`differentDomains`](/docs/api/options#differentdomains）时如果多个域具有多个区域，这个属性是必需的。
+- 将 `domainDefault` 设置为 `true`，以使每个区域在特定域中充当默认区域。使用 [`differentDomains`](/docs/api/options#differentdomains) 时如果多个域具有多个区域，这个属性是必需的。
 
 ### `...`
 - 在对象上设置的任何自定义属性将在运行时暴露。这可以用于示例中，定义页面上语言选择器所需的语言名称。
